# voxelius

./: .gitattributes  .gitignore  .itch.toml  CMakeLists.txt  LICENSE.txt  README.md  build.linux.generic.sh  build.windows.x32.sh  build.windows.x64.sh
assets/: CMakeLists.txt
assets/lang/: lang.en_US.json  lang.ru_RU.json
assets/motds/: server.txt
assets/shaders/: background.frag  background.vert  chunk_quad.frag  chunk_quad.vert  crosshair.frag  crosshair.vert  outline.frag  outline.vert
media/: untolabs.xcf  vserver.bbmodel
source/cmake/: CMakeLists.txt  config.hh.in
source/common/: CMakeLists.txt  cmdline.cc  cmdline.hh  config.cc  config.hh  crc64.cc  crc64.hh  epoch.cc  epoch.hh  fstools.cc  fstools.hh  packet_buffer.cc  packet_buffer.hh  precompiled.hh  strtools.cc  strtools.hh
source/common/resource/: binary_file.cc  binary_file.hh  image.cc  image.hh  resource.hh
source/game/client/: CMakeLists.txt  const.hh  experiments.cc  experiments.hh  game.cc  game.hh  globals.cc  globals.hh  keyboard.cc  keyboard.hh  keynames.cc  keynames.hh  main.cc  mouse.cc  mouse.hh  precompiled.hh  receive.cc  receive.hh  screenshot.cc  screenshot.hh  session.cc  session.hh  toggles.cc  toggles.hh  varied_program.cc  varied_program.hh  vclient.rc  view.cc  view.hh
source/game/client/entity/: factory.cc  factory.hh  interpolation.cc  interpolation.hh  player_look.cc  player_look.hh  player_move.cc  player_move.hh  player_target.cc  player_target.hh  sound_emitter.cc  sound_emitter.hh
source/game/client/event/: glfw_cursor_pos.hh  glfw_framebuffer_size.hh  glfw_key.hh  glfw_mouse_button.hh  glfw_scroll.hh  language_set.hh
source/game/client/gui/: background.cc  background.hh  chat.cc  chat.hh  gui_screen.hh  imdraw_ext.cc  imdraw_ext.hh  language.cc  language.hh  main_menu.cc  main_menu.hh  message_box.cc  message_box.hh  metrics.cc  metrics.hh  play_menu.cc  play_menu.hh  player_list.cc  player_list.hh  progress.cc  progress.hh  settings.cc  settings.hh  splash.cc  splash.hh  text_shadow.cc  text_shadow.hh
source/game/client/hud/: crosshair.cc  crosshair.hh  hotbar.cc  hotbar.hh  metrics.cc  status_lines.cc  status_lines.hh
source/game/client/resource/: sound_effect.cc  sound_effect.hh  texture2D.cc  texture2D.hh
source/game/client/sound/: listener.cc  listener.hh  sound.cc  sound.hh
source/game/client/world/: chunk_mesher.cc  chunk_mesher.hh  chunk_quad.hh  chunk_renderer.cc  chunk_renderer.hh  chunk_vbo.hh  chunk_visibility.cc  chunk_visibility.hh  outline.cc  outline.hh  player_target.cc  player_target.hh  skybox.cc  skybox.hh  voxel_anims.cc  voxel_anims.hh  voxel_atlas.cc  voxel_atlas.hh
source/game/server/: CMakeLists.txt  chat.cc  chat.hh  game.cc  game.hh  globals.cc  globals.hh  main.cc  precompiled.hh  receive.cc  receive.hh  sessions.cc  sessions.hh  status.cc  status.hh  vserver.rc  whitelist.cc  whitelist.hh
source/game/shared/: CMakeLists.txt  const.hh  factory.cc  factory.hh  globals.cc  globals.hh  motd.cc  motd.hh  precompiled.hh  protocol.cc  protocol.hh  setup.cc  setup.hh
source/game/shared/entity/: chunk.hh  collision.cc  collision.hh  factory.cc  factory.hh  gravity.cc  gravity.hh  grounded.hh  head.hh  hull.cc  hull.hh  inhabited.hh  player.hh  stasis.cc  stasis.hh  transform.cc  transform.hh  velocity.cc  velocity.hh
source/game/shared/event/: chunk_create.hh  chunk_update.hh  voxel_set.hh
source/game/shared/world/: chunk.cc  chunk.hh  chunk_coord.cc  chunk_coord.hh  chunk_coord_2d.hh  game_items.cc  game_items.hh  game_voxels.cc  game_voxels.hh  item_def.cc  item_def.hh  item_id.hh  local_coord.cc  local_coord.hh  ray_dda.cc  ray_dda.hh  universe.cc  universe.hh  unloader.cc  unloader.hh  vdef.cc  vdef.hh  voxel_coord.cc  voxel_coord.hh  voxel_def.cc  voxel_def.hh  voxel_id.hh  world.cc  world.hh  world_coord.cc  world_coord.hh
source/game/shared/worldgen/: overworld.cc  overworld.hh  worldgen.cc  worldgen.hh
source/mathlib/: CMakeLists.txt  box3base.hh  box3f.hh  constexpr.hh  floathacks.hh  mat4x4base.hh  mat4x4f.cc  mat4x4f.hh  precompiled.hh  vec2base.hh  vec2f.cc  vec2f.hh  vec3angles.cc  vec3angles.hh  vec3base.hh  vec3f.cc  vec3f.hh  vec4base.hh  vec4f.cc  vec4f.hh
