install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/fonts"     DESTINATION ".")
install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/lang"      DESTINATION ".")
install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/motds"     DESTINATION ".")
install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/shaders"   DESTINATION ".")
install(DIRECTORY "${CMAKE_CURRENT_LIST_DIR}/textures"  DESTINATION ".")
